
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="menu_title">My Nanodegree Apps!</string>
    <string name="app_one">Spell It</string>
    <string name="app_two">Popular Movies</string>
    <string name="app_three">Stock Hawk</string>
    <string name="app_four">Build It Bigger</string>
    <string name="app_five">Make your app material</string>
    <string name="app_six">Go Ubiquitous</string>
    <string name="app_seven">Capstone</string>

</resources>
