<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.co.maitech.myappportfolio.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >
        <!--android:layout_centerInParent="true">-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_title" />

            <Button
                style="@style/ButtonStyle"
                android:text="@string/app_one"
                android:onClick="announce"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/app_two"
                android:onClick="announce"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/app_three"
                android:onClick="announce"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/app_four"
                android:onClick="announce"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/app_five"
                android:onClick="announce"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/app_six"
                android:onClick="announce"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/app_seven"
                android:onClick="announce"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>